force-app/main/default/objects/WorkOrderLineItem/fields/AbrangenciaCadaProduto__c.field-meta.xml
<CustomField>
    <fullName>AbrangenciaCadaProduto__c</fullName>
    <label>Informe a abrangência de cada produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>