force-app/main/default/objects/WorkOrderLineItem/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Atas</relationshipLabel>
    <relationshipName>Atas</relationshipName>
    <type>Lookup</type>
</CustomField>