force-app/main/default/objects/WorkOrderLineItem/fields/AnalistaGRCCParticipanteVisita__c.field-meta.xml
<CustomField>
    <fullName>AnalistaGRCCParticipanteVisita__c</fullName>
    <label>Analista GRCC participante da visita</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrea Metzker Generoso</fullName>
            </value>
            <value>
                <fullName>Catulo Soares Miranda</fullName>
            </value>
            <value>
                <fullName>Fabiana de Sousa Costa</fullName>
            </value>
            <value>
                <fullName>Jaqueline Andrade Alves da Silva Costa</fullName>
            </value>
            <value>
                <fullName>Klaus Cardoso</fullName>
            </value>
            <value>
                <fullName>Lara do Carmo Pereira</fullName>
            </value>
            <value>
                <fullName>Matheus Anacleto</fullName>
            </value>
            <value>
                <fullName>Páglia Perdosa Barboza</fullName>
            </value>
            <value>
                <fullName>Paulo Colomarte de Castro</fullName>
            </value>
            <value>
                <fullName>Samila Fabiane Godoy</fullName>
            </value>
            <value>
                <fullName>Thiago Henrique de Castro Maforte</fullName>
            </value>
            <value>
                <fullName>Daiana Zeferino Soares</fullName>
            </value>
            <value>
                <fullName>Erika Soares Almeida Arantes</fullName>
            </value>
            <value>
                <fullName>Henrique Jansen de Avelar Ribeiro</fullName>
            </value>
            <value>
                <fullName>Henrique Cezano Raos de Oliveira</fullName>
            </value>
            <value>
                <fullName>Monalisa Fernanda Arantes S. Drumond</fullName>
            </value>
            <value>
                <fullName>Luciana Bastos Guimarães Alves</fullName>
            </value>
            <value>
                <fullName>Robson David Mahé</fullName>
            </value>
            <value>
                <fullName>Tamara Lúcia de Siqueira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>