force-app/main/default/objects/WorkOrderLineItem/fields/AnosContratoAtualAtivo__c.field-meta.xml
<CustomField>
    <fullName>AnosContratoAtualAtivo__c</fullName>
    <label>Anos o contrato atual está ativo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>