force-app/main/default/objects/WorkOrderLineItem/fields/AssinaturaProspectRegistrada__c.field-meta.xml
<CustomField>
    <fullName>AssinaturaProspectRegistrada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A assinatura do prospect foi registrada?</label>
    <type>Checkbox</type>
</CustomField>