force-app/main/default/objects/WorkOrderLineItem/fields/AssinaturaSR__c.field-meta.xml
<CustomField>
    <fullName>AssinaturaSR__c</fullName>
    <description>Campo para obtenção de informações sobre a assinatura fornecida.</description>
    <formula>IF(NomeRepresentanteCorretora__c == &apos;&apos;, &apos;Assinatura: &apos;, &apos;Assinatura corretora: &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assinatura</label>
    <type>Text</type>
</CustomField>