force-app/main/default/objects/WorkOrderLineItem/fields/AtendimentoSR__c.field-meta.xml
<CustomField>
    <fullName>AtendimentoSR__c</fullName>
    <description>Referência ao nome de usuário do OwnerId</description>
    <formula>OwnerId__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Atendimento</label>
    <type>Text</type>
</CustomField>