force-app/main/default/objects/WorkOrderLineItem/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <description>Campo fórmula para obter e disponibilizar os bairros dos leads relacionados, dentro das atas.</description>
    <formula>Lead__r.Bairro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bairro</label>
    <type>Text</type>
</CustomField>