force-app/main/default/objects/WorkOrderLineItem/fields/CargoContatoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>CargoContatoEmpresa__c</fullName>
    <label>Informe o cargo do contato da empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>