force-app/main/default/objects/WorkOrderLineItem/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <description>Campo fórmula para obter e disponibilizaras cidades dos leads relacionados, dentro das atas.</description>
    <formula>Lead__r.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cidade</label>
    <type>Text</type>
</CustomField>