force-app/main/default/objects/WorkOrderLineItem/fields/CidadeGrupo__c.field-meta.xml
<CustomField>
    <fullName>CidadeGrupo__c</fullName>
    <label>Informe a cidade do grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>