force-app/main/default/objects/WorkOrderLineItem/fields/ClienteCompareceu__c.field-meta.xml
<CustomField>
    <fullName>ClienteCompareceu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente compareceu?</label>
    <type>Checkbox</type>
</CustomField>