force-app/main/default/objects/WorkOrderLineItem/fields/CNPJCPF__c.field-meta.xml
<CustomField>
    <fullName>CNPJCPF__c</fullName>
    <label>CNPJ/CPF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>