force-app/main/default/objects/WorkOrderLineItem/fields/CNPJGrupo__c.field-meta.xml
<CustomField>
    <fullName>CNPJGrupo__c</fullName>
    <label>Informe o CNPJ do grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>