force-app/main/default/objects/WorkOrderLineItem/fields/ContingenteMaximo__c.field-meta.xml
<CustomField>
    <fullName>ContingenteMaximo__c</fullName>
    <label>Informe o contingente máximo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>