force-app/main/default/objects/WorkOrderLineItem/fields/ContingenteMinimo__c.field-meta.xml
<CustomField>
    <fullName>ContingenteMinimo__c</fullName>
    <label>Informe o contingente mínimo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>