force-app/main/default/objects/WorkOrderLineItem/fields/ContingentePotencial__c.field-meta.xml
<CustomField>
    <fullName>ContingentePotencial__c</fullName>
    <label>Contingente potencial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>