force-app/main/default/objects/WorkOrderLineItem/fields/Corretora__c.field-meta.xml
<CustomField>
    <fullName>Corretora__c</fullName>
    <label>Intermediadora</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3C CORRETORA DE SEGUROS LTDA ME</fullName>
            </value>
            <value>
                <fullName>A &amp; C NUNES CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>A.R.G - MULTIPLA CORRETORA E ADMINISTRADORA DE SEGUROS LTDA AAGS CORRETORA DE SEGUROS LTDA - ME</fullName>
            </value>
            <value>
                <fullName>ABNARA CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>ADMIRAL CORRETORA E ADMINISTRADORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>ADMIX - ADMINISTRACAO, CONSULTORIA</fullName>
            </value>
            <value>
                <fullName>PARTICIPACOES E CORRETORA DE SEGUROS DE VIDAS LTDA</fullName>
            </value>
            <value>
                <fullName>ALLCARE BENEFICIOS CORRETORA DE SEGUROS SAO PAULO LTDA</fullName>
            </value>
            <value>
                <fullName>ALV ADMINISTRADORA E CORRETORA DE SEGUROS LTDA ME,</fullName>
            </value>
            <value>
                <fullName>AMMA &amp; TORRES ADMINISTRADORA E CORRETORA DE SEGUROS EIRELI</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>AMPLA CONSULTORIA E CORRETORA DE SEGUROS LTDA</fullName>
            </value>
            <value>
                <fullName>AON HOLDINGS CORRETORES DE SEGUROS LTDA - FILIAL</fullName>
            </value>
            <value>
                <fullName>AON HOLDINGS CORRETORES DE SEGUROS LTDA - MATRIZ</fullName>
            </value>
            <value>
                <fullName>ASPEN CORRETORA DE SEGUROS LTDA - ME</fullName>
            </value>
            <value>
                <fullName>ASSCONTAS ASSOCIACAO DOS SERVIDORES TRIBUNAL DE CONTAS DO ESTADO DE MINAS GERAIS</fullName>
            </value>
            <value>
                <fullName>ASSOC DOS SERVID MUNICIPAIS DA PREFEIT DE B HORIZONTE</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO COMERCIAL E EMPRESARIAL DE MINAS - ACMINAS</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO DE ASSISTENCIA AOS SERVIDORES DO CEFET MG ASCEFET MG</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO DOS EMPREGADOS DA COPASA DE SUAS SUBSIDIARIAS E PATROCINADAS AECO</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO DOS SERV PUBLICOS MUNICIPAIS DE SABARA</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO DOS SERVIDORES DA POLICIA FEDERAL DE BELO HORIZONTE MG ANSEF</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO DOS SERVIDORES MUNICIPAIS DE BETIM ASMUBE</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO DOS SERVIDORES MUNICIPAIS DE VESPASIANO</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO MEDICA DE MINAS GERAIS</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO NACIONAL DAS EMPRESAS PROJETISTAS E PREST DE SERVICOS PARA AREA DE ENG E CONGENERES</fullName>
            </value>
            <value>
                <fullName>ASSOCIACAO NACIONAL DOS SERVIDORES PUBLICOS DA FEDERACAO</fullName>
            </value>
            <value>
                <fullName>ASTRUS ADMINISTRADORA E CORRETORA DE SEGUROS SAUDE</fullName>
            </value>
            <value>
                <fullName>VIDA CAPITALIZACAO E PREVIDENCIA PRIVADA LTDA</fullName>
            </value>
            <value>
                <fullName>BEM BENEFICIOS ASSESSORIA EM BENEFICIOS LTDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>