force-app/main/default/objects/WorkOrderLineItem/fields/CorretoraAta__c.field-meta.xml
<CustomField>
    <fullName>CorretoraAta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretora</label>
    <referenceTo>Corretora__c</referenceTo>
    <relationshipLabel>Atas</relationshipLabel>
    <relationshipName>Atas</relationshipName>
    <type>Lookup</type>
</CustomField>