force-app/main/default/objects/WorkOrderLineItem/fields/DataBaseOutraOperadora__c.field-meta.xml
<CustomField>
    <fullName>DataBaseOutraOperadora__c</fullName>
    <label>Data base na outra operadora</label>
    <type>Date</type>
</CustomField>