force-app/main/default/objects/WorkOrderLineItem/fields/DataBaseUltimoReajuste__c.field-meta.xml
<CustomField>
    <fullName>DataBaseUltimoReajuste__c</fullName>
    <label>Data base ou do último reajuste</label>
    <type>Date</type>
</CustomField>