force-app/main/default/objects/WorkOrderLineItem/fields/DataRetorno__c.field-meta.xml
<CustomField>
    <fullName>DataRetorno__c</fullName>
    <label>Data de retorno</label>
    <type>Date</type>
</CustomField>