force-app/main/default/objects/WorkOrderLineItem/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Campo fórmula para obter e disponibilizar os e-mails dos leads relacionados, dentro das atas.</description>
    <formula>Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>