force-app/main/default/objects/WorkOrderLineItem/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <description>Campo fórmula para obter e disponibilizar as empresas dos leads relacionados, dentro das atas.</description>
    <formula>Lead__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empresa</label>
    <type>Text</type>
</CustomField>