force-app/main/default/objects/WorkOrderLineItem/fields/EmpresaPertenceAlgumGrupo__c.field-meta.xml
<CustomField>
    <fullName>EmpresaPertenceAlgumGrupo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A empresa pertence a algum grupo?</label>
    <type>Checkbox</type>
</CustomField>