force-app/main/default/objects/WorkOrderLineItem/fields/EmpresaPossuiAssistenciaMedica__c.field-meta.xml
<CustomField>
    <fullName>EmpresaPossuiAssistenciaMedica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A empresa já possui assistência médica?</label>
    <type>Checkbox</type>
</CustomField>