force-app/main/default/objects/WorkOrderLineItem/fields/EmpresaPossuiPlanoOdontologico__c.field-meta.xml
<CustomField>
    <fullName>EmpresaPossuiPlanoOdontologico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empresa possui plano odontológico?</label>
    <type>Checkbox</type>
</CustomField>