force-app/main/default/objects/WorkOrderLineItem/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Campo fórmula para obter e disponibilizar os estados dos leads relacionados, dentro das atas.</description>
    <formula>Lead__r.State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado</label>
    <type>Text</type>
</CustomField>