force-app/main/default/objects/WorkOrderLineItem/fields/Farol__c.field-meta.xml
<CustomField>
    <fullName>Farol__c</fullName>
    <formula>IMAGE(
CASE
(Status,
 &apos;Completed&apos;, &apos;/resource/1599569258000/FarolVerde&apos;,
 &apos;/resource/1599569258000/FarolLaranja&apos;),
&apos;Sem Informações&apos;, 18, 18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Farol</label>
    <type>Text</type>
</CustomField>