force-app/main/default/objects/WorkOrderLineItem/fields/HorarioAtendimento__c.field-meta.xml
<CustomField>
    <fullName>HorarioAtendimento__c</fullName>
    <label>Horário de atendimento</label>
    <type>DateTime</type>
</CustomField>