force-app/main/default/objects/WorkOrderLineItem/fields/HouveAcompanhamentoCorretora__c.field-meta.xml
<CustomField>
    <fullName>HouveAcompanhamentoCorretora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Houve acompanhamento da intermediadora?</label>
    <type>Checkbox</type>
</CustomField>