force-app/main/default/objects/WorkOrderLineItem/fields/HouveAlteracaoContingente__c.field-meta.xml
<CustomField>
    <fullName>HouveAlteracaoContingente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Houve alteração do contingente?</label>
    <type>Checkbox</type>
</CustomField>