force-app/main/default/objects/WorkOrderLineItem/fields/HouveAlteracaoDadosProspeccao__c.field-meta.xml
<CustomField>
    <fullName>HouveAlteracaoDadosProspeccao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Houve alteração nos dados da prospecção?</label>
    <type>Checkbox</type>
</CustomField>