force-app/main/default/objects/WorkOrderLineItem/fields/HouveEntregaBrinde__c.field-meta.xml
<CustomField>
    <fullName>HouveEntregaBrinde__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Houve entrega de brinde?</label>
    <type>Checkbox</type>
</CustomField>