force-app/main/default/objects/WorkOrderLineItem/fields/HouveInclusaoAdicionais__c.field-meta.xml
<CustomField>
    <fullName>HouveInclusaoAdicionais__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Houve inclusão de adicionais?</label>
    <type>Checkbox</type>
</CustomField>