force-app/main/default/objects/WorkOrderLineItem/fields/HouveParticipacaoAlgumaCorretora__c.field-meta.xml
<CustomField>
    <fullName>HouveParticipacaoAlgumaCorretora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participação de alguma intermediadora?</label>
    <type>Checkbox</type>
</CustomField>