force-app/main/default/objects/WorkOrderLineItem/fields/JustificativaAusenciaAsProspect__c.field-meta.xml
<CustomField>
    <fullName>JustificativaAusenciaAsProspect__c</fullName>
    <inlineHelpText>Justificativa da ausência da assinatura do prospect</inlineHelpText>
    <label>Justificativa da ausência de assinatura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>