force-app/main/default/objects/WorkOrderLineItem/fields/JustificativaClienteAusente__c.field-meta.xml
<CustomField>
    <fullName>JustificativaClienteAusente__c</fullName>
    <inlineHelpText>Justificativa do cliente ausente com características do local</inlineHelpText>
    <label>Justificativa do cliente ausente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>