force-app/main/default/objects/WorkOrderLineItem/fields/LogoUnimed__c.field-meta.xml
<CustomField>
    <fullName>LogoUnimed__c</fullName>
    <description>Campo para exibição do logo Unimed nos modelos de relatório de serviço</description>
    <formula>IMAGE(&apos;/resource/1600869183000/LogoUnimed&apos;, &apos;Sem Informações&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo Unimed</label>
    <type>Text</type>
</CustomField>