force-app/main/default/objects/WorkOrderLineItem/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preço</fullName>
            </value>
            <value>
                <fullName>Rede</fullName>
            </value>
            <value>
                <fullName>Cobertura</fullName>
            </value>
            <value>
                <fullName>Falta de interesse no produto</fullName>
            </value>
            <value>
                <fullName>Multa rescisória na contratante</fullName>
            </value>
            <value>
                <fullName>Satisfação com o prestador atual</fullName>
            </value>
            <value>
                <fullName>Avaliar com decisor</fullName>
            </value>
            <value>
                <fullName>Avaliação orçamentária</fullName>
            </value>
            <value>
                <fullName>Pendente de documentação</fullName>
            </value>
            <value>
                <fullName>Sem condição financeira</fullName>
            </value>
            <value>
                <fullName>Em cotação de mercado</fullName>
            </value>
            <value>
                <fullName>Preço superior ao plano atual</fullName>
            </value>
            <value>
                <fullName>Preço (em relação à concorrência)</fullName>
            </value>
            <value>
                <fullName>Preço (condições financeiras)</fullName>
            </value>
            <value>
                <fullName>Cliente Inadimplente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>