force-app/main/default/objects/WorkOrderLineItem/fields/MotivoNaoFechamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoNaoFechamento__c</fullName>
    <label>Motivo não fechamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sem Condições Financeiras</fullName>
            </value>
            <value>
                <fullName>Preço Acima da Concorrência</fullName>
            </value>
            <value>
                <fullName>Já cliente Unimed Empresarial</fullName>
            </value>
            <value>
                <fullName>Já cliente Unimed Individual</fullName>
            </value>
            <value>
                <fullName>Deseja Plano Empresaria</fullName>
            </value>
            <value>
                <fullName>Já Cliente Unimed Adesão</fullName>
            </value>
            <value>
                <fullName>Cliente Unimed Inadimplente</fullName>
            </value>
            <value>
                <fullName>Cliente não concorda com prazos e carências</fullName>
            </value>
            <value>
                <fullName>Cliente Fora da área de atuação</fullName>
            </value>
            <value>
                <fullName>Cliente sem documentação necessária</fullName>
            </value>
            <value>
                <fullName>Em negociação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>