force-app/main/default/objects/WorkOrderLineItem/fields/MotivoVisita__c.field-meta.xml
<CustomField>
    <fullName>MotivoVisita__c</fullName>
    <label>Motivo da visita</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implantação</fullName>
            </value>
            <value>
                <fullName>Manutenção</fullName>
            </value>
            <value>
                <fullName>Prospecção</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>