force-app/main/default/objects/WorkOrderLineItem/fields/MotivoVisitaCall__c.field-meta.xml
<CustomField>
    <fullName>MotivoVisitaCall__c</fullName>
    <label>Motivo da visita (Call)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implantação</fullName>
            </value>
            <value>
                <fullName>Manutenção</fullName>
            </value>
            <value>
                <fullName>Prospecção PF</fullName>
            </value>
            <value>
                <fullName>Prospecção PJ</fullName>
            </value>
            <value>
                <fullName>Prospecção PJ - Grandes Contas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>