force-app/main/default/objects/WorkOrderLineItem/fields/MotivoVisitaImplantacao__c.field-meta.xml
<CustomField>
    <fullName>MotivoVisitaImplantacao__c</fullName>
    <label>Motivo da visita (Implantação)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Início do Processo de Implantação</fullName>
            </value>
            <value>
                <fullName>Complemento de Implantação</fullName>
            </value>
            <value>
                <fullName>Passagem de Bastão</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>