force-app/main/default/objects/WorkOrderLineItem/fields/MotivoVisitaPJClienteAusente__c.field-meta.xml
<CustomField>
    <fullName>MotivoVisitaPJClienteAusente__c</fullName>
    <label>Motivo da visita (PJ Cliente Ausente)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implantação</fullName>
            </value>
            <value>
                <fullName>Manutenção</fullName>
            </value>
            <value>
                <fullName>Prospecção</fullName>
            </value>
            <value>
                <fullName>Prospecção PJ - Grandes Contas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>