force-app/main/default/objects/WorkOrderLineItem/fields/MotivoVisitaSR__c.field-meta.xml
<CustomField>
    <fullName>MotivoVisitaSR__c</fullName>
    <description>Campo para obtenção do motivo da visita realizada</description>
    <formula>&apos;Motivo da visita: &apos; + WorkOrder.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motivo Visita</label>
    <type>Text</type>
</CustomField>