force-app/main/default/objects/WorkOrderLineItem/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <description>Campo fórmula para obter e disponibilizar os nomes dos leads relacionados, dentro das atas.</description>
    <formula>Lead__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome</label>
    <type>Text</type>
</CustomField>