force-app/main/default/objects/WorkOrderLineItem/fields/NomeBrindeEntregue__c.field-meta.xml
<CustomField>
    <fullName>NomeBrindeEntregue__c</fullName>
    <label>Nome do brinde entregue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>