force-app/main/default/objects/WorkOrderLineItem/fields/NomeContatoCorretora__c.field-meta.xml
<CustomField>
    <fullName>NomeContatoCorretora__c</fullName>
    <label>Nome do contato da intermediadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>