force-app/main/default/objects/WorkOrderLineItem/fields/NomeContatoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>NomeContatoEmpresa__c</fullName>
    <label>Nome do Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>