force-app/main/default/objects/WorkOrderLineItem/fields/NomeContatoEmpresaAtaImplantacao__c.field-meta.xml
<CustomField>
    <fullName>NomeContatoEmpresaAtaImplantacao__c</fullName>
    <label>Nome do Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>