force-app/main/default/objects/WorkOrderLineItem/fields/NomeDecisor__c.field-meta.xml
<CustomField>
    <fullName>NomeDecisor__c</fullName>
    <label>Nome do decisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>