force-app/main/default/objects/WorkOrderLineItem/fields/NomeRepresentanteCorretora__c.field-meta.xml
<CustomField>
    <fullName>NomeRepresentanteCorretora__c</fullName>
    <label>Nome do representante da intermediadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>