force-app/main/default/objects/WorkOrderLineItem/fields/NomesProdutos__c.field-meta.xml
<CustomField>
    <fullName>NomesProdutos__c</fullName>
    <label>Nomes dos produtos?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>