force-app/main/default/objects/WorkOrderLineItem/fields/NumeroFuncionarios__c.field-meta.xml
<CustomField>
    <fullName>NumeroFuncionarios__c</fullName>
    <label>Número de funcionários</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>