force-app/main/default/objects/WorkOrderLineItem/fields/NumeroVidas__c.field-meta.xml
<CustomField>
    <fullName>NumeroVidas__c</fullName>
    <description>Numero de pessoas que possuem plano</description>
    <label>Numero de vidas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>