force-app/main/default/objects/WorkOrderLineItem/fields/ObservacoesGerais__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesGerais__c</fullName>
    <label>Observações gerais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>