force-app/main/default/objects/WorkOrderLineItem/fields/ObservacoesSr__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesSr__c</fullName>
    <description>Campo para obter as observações da visita</description>
    <formula>&apos;Observações: &apos; +  WorkOrder.ObservacoesSR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Observações</label>
    <type>Text</type>
</CustomField>