force-app/main/default/objects/WorkOrderLineItem/fields/ObservacoesVisita__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesVisita__c</fullName>
    <label>Observações da visita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>