force-app/main/default/objects/WorkOrderLineItem/fields/OpcionaisIncluidos__c.field-meta.xml
<CustomField>
    <fullName>OpcionaisIncluidos__c</fullName>
    <label>Opcionais incluídos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Odontológico</fullName>
            </value>
            <value>
                <fullName>Aeromédico</fullName>
            </value>
            <value>
                <fullName>Odonto+Aero</fullName>
            </value>
            <value>
                <fullName>Proteção Familiar</fullName>
            </value>
            <value>
                <fullName>Odonto+Proteção Familiar</fullName>
            </value>
            <value>
                <fullName>Aero+Proteção Familiar</fullName>
            </value>
            <value>
                <fullName>Odonto+Aero+Proteção Familiar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>