force-app/main/default/objects/WorkOrderLineItem/fields/Operadora__c.field-meta.xml
<CustomField>
    <fullName>Operadora__c</fullName>
    <label>Operadora</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amil</fullName>
            </value>
            <value>
                <fullName>Sulamérica</fullName>
            </value>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>Vitallis</fullName>
            </value>
            <value>
                <fullName>Promed</fullName>
            </value>
            <value>
                <fullName>Unimed</fullName>
            </value>
            <value>
                <fullName>Med Senior</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Outra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>