force-app/main/default/objects/WorkOrderLineItem/fields/OperadoraPlanoOdontologico__c.field-meta.xml
<CustomField>
    <fullName>OperadoraPlanoOdontologico__c</fullName>
    <label>Operadora do plano odontológico?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sulamérica</fullName>
            </value>
            <value>
                <fullName>Amil</fullName>
            </value>
            <value>
                <fullName>Vitallis / Keralty</fullName>
            </value>
            <value>
                <fullName>Belo Dente</fullName>
            </value>
            <value>
                <fullName>Metlife</fullName>
            </value>
            <value>
                <fullName>Odontoprev</fullName>
            </value>
            <value>
                <fullName>Bradesco</fullName>
            </value>
            <value>
                <fullName>Inpao</fullName>
            </value>
            <value>
                <fullName>Uniodonto</fullName>
            </value>
            <value>
                <fullName>Outra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>