force-app/main/default/objects/WorkOrderLineItem/fields/OperadoraPlanoOdontologicoTexto__c.field-meta.xml
<CustomField>
    <fullName>OperadoraPlanoOdontologicoTexto__c</fullName>
    <label>Operadora do plano odontológico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>