force-app/main/default/objects/WorkOrderLineItem/fields/OperadoraTexto__c.field-meta.xml
<CustomField>
    <fullName>OperadoraTexto__c</fullName>
    <label>Operadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>