force-app/main/default/objects/WorkOrderLineItem/fields/OutraOperadora__c.field-meta.xml
<CustomField>
    <fullName>OutraOperadora__c</fullName>
    <label>Outra operadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>