force-app/main/default/objects/WorkOrderLineItem/fields/OutraOperadoraOdontologica__c.field-meta.xml
<CustomField>
    <fullName>OutraOperadoraOdontologica__c</fullName>
    <label>Outra operadora odontológica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>