force-app/main/default/objects/WorkOrderLineItem/fields/ParticipacaoAlgumAnalistaGRC__c.field-meta.xml
<CustomField>
    <fullName>ParticipacaoAlgumAnalistaGRC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participação de algum analista de GRCC?</label>
    <type>Checkbox</type>
</CustomField>