force-app/main/default/objects/WorkOrderLineItem/fields/PercentualContribuicaoDependente__c.field-meta.xml
<CustomField>
    <fullName>PercentualContribuicaoDependente__c</fullName>
    <inlineHelpText>Percentual de contribuição do empregador em relação ao dependente</inlineHelpText>
    <label>% de contribuição dependente</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>